--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -104,6 +104,7 @@
         } else {
             generateMyIdButton.click();
         }
+let callButtonClicked = false; // Variable pour contrôler l'exécution
 
         function initializePeer(id) {
             peer = new Peer(id);
@@ -123,7 +124,11 @@
                         });
                         lastCallerId = incomingCall.peer;
                         peerIdInput.value = lastCallerId;
+                        if (!callButtonClicked)
+                        {
                                     callButton.click();
+                            callButtonClicked = true;
+                        }
                     })
                     .catch((err) => {
                         console.error('Failed to get local stream', err);
@@ -278,6 +283,7 @@
             }
             localVideo.srcObject = null;
             remoteVideo.srcObject = null;
+                     callButtonClicked = false;
         });
 
         muteCheckbox.addEventListener('change', () => {
