--- a/WebCam.html
+++ b/WebCam.html
@@ -64,6 +64,8 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
+        <button id="likeButton">❤️</button>
+        <p id="likesCount">Likes reçus: 0</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -71,6 +73,9 @@
         let localStream;
         let peer;
         let call;
+        let validUsers = [];
+        let likedUsers = {};
+        let lastCallerId = '';
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -82,7 +87,8 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const cameraLabel = document.getElementById('cameraLabel');
+        const likeButton = document.getElementById('likeButton');
+        const likesCount = document.getElementById('likesCount');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -95,7 +101,10 @@
         if (storedId) {
             myIdInput.value = storedId;
             initializePeer(storedId);
+        } else {
+            generateMyIdButton.click();
         }
+let callButtonClicked = false; // Variable pour contrôler l'exécution
 
         function initializePeer(id) {
             peer = new Peer(id);
@@ -113,10 +122,31 @@
                         incomingCall.on('stream', (remoteStream) => {
                             remoteVideo.srcObject = remoteStream;
                         });
+                        lastCallerId = incomingCall.peer;
+                        peerIdInput.value = lastCallerId;
+                        if (!callButtonClicked)
+                        {
+                                    callButton.click();
+                            callButtonClicked = true;
+                        }
                     })
                     .catch((err) => {
                         console.error('Failed to get local stream', err);
                     });
+            });
+
+            peer.on('connection', conn => {
+                conn.on('data', data => {
+                    if (data.type === 'like') {
+                        const senderId = conn.peer;
+                        if (!likedUsers[senderId]) {
+                            likedUsers[senderId] = 1;
+                        } else {
+                            likedUsers[senderId]++;
+                        }
+                        updateLikesCount();
+                    }
+                });
             });
         }
 
@@ -130,7 +160,7 @@
                 .then(stream => {
                     localStream = stream;
                     localVideo.srcObject = stream;
-                    applyMicMute(); // Applique le mute initial selon l'état du checkbox
+                    applyMicMute();
                     return stream;
                 })
                 .catch((err) => {
@@ -143,30 +173,44 @@
             const device = detectDevice();
             let constraints = {
                 audio: true,
-                video: true
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
             };
 
+            const devices = await navigator.mediaDevices.enumerateDevices();
+            const videoDevices = devices.filter(device => device.kind === 'videoinput');
+            cameraSelect.innerHTML = '';
+
             if (device === 'iOS') {
-                // Pour iOS, lister les caméras disponibles
-                const devices = await navigator.mediaDevices.enumerateDevices();
-                const videoDevices = devices.filter(device => device.kind === 'videoinput');
-                cameraSelect.innerHTML = '';
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else if (device === 'Android') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
-                    option.text = device.label || `Caméra ${index + 1}`;
+                    option.text = `Caméra ${index + 1}`;
                     cameraSelect.appendChild(option);
                 });
-                cameraLabel.style.display = 'block';
-                constraints.video = {
-                    deviceId: { exact: cameraSelect.value }
-                };
-            } else {
-                // Pour les autres appareils, utilisez la caméra arrière par défaut
-                constraints.video = {
-                    facingMode: 'environment'
-                };
-                cameraLabel.style.display = 'none';
+            }
+
+            // Restore the previously selected camera
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
             }
 
             return constraints;
@@ -216,7 +260,7 @@
                 .then((stream) => {
                     localStream = stream;
                     localVideo.srcObject = stream;
-                    applyMicMute(); // Applique le mute initial
+                    applyMicMute();
                     call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
                         remoteVideo.srcObject = remoteStream;
@@ -239,30 +283,40 @@
             }
             localVideo.srcObject = null;
             remoteVideo.srcObject = null;
+                     callButtonClicked = false;
         });
 
         muteCheckbox.addEventListener('change', () => {
-            applyMicMute(); // Mute ou unmute le microphone localement
+            applyMicMute();
         });
 
         muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked); // Envoie le signal de mute au deuxième utilisateur
-        });
-
-        document.addEventListener('DOMContentLoaded', async () => {
-            const device = detectDevice();
-            console.log('Appareil détecté : ' + device);
-            if (device === 'iOS') {
-                await detectCameraConstraints();
-            }
+            sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
         cameraSelect.addEventListener('change', async () => {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
             if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
+                const videoTracks = localStream.getVideoTracks();
+                videoTracks.forEach(track => track.stop());
             }
             await getLocalStream();
         });
+
+        likeButton.addEventListener('click', () => {
+            if (call) {
+                const conn = peer.connect(call.peer);
+                conn.on('open', () => {
+                    conn.send({ type: 'like' });
+                });
+            }
+        });
+
+        function updateLikesCount() {
+            const totalLikes = Object.values(likedUsers).reduce((acc, count) => acc + count, 0);
+            likesCount.textContent = `Likes reçus: ${totalLikes}`;
+        }
+
     </script>
 </body>
 </html>
