--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -151,7 +151,10 @@
         }
 
         async function getLocalStream() {
-            const constraints = await detectCameraConstraints();
+            const constraints = {
+                audio: true,
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+            };
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
@@ -165,46 +168,19 @@
                 });
         }
 
-        async function detectCameraConstraints() {
-            const device = detectDevice();
-            let constraints = {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
-
+        async function updateCameraSelect() {
             const devices = await navigator.mediaDevices.enumerateDevices();
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
 
-            if (videoDevices.length > 1) {
-                cameraSelect.innerHTML = `
-                    <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                    <option value="${videoDevices[1].deviceId}">Caméra 2</option>
-                `;
-            } else if (videoDevices.length === 1) {
-                cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+            if (videoDevices.length > 0) {
+                videoDevices.forEach(device => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = device.label || `Caméra ${cameraSelect.length + 1}`;
+                    cameraSelect.appendChild(option);
+                });
             }
-
-            const savedCameraId = localStorage.getItem('selectedCameraId');
-            if (savedCameraId) {
-                cameraSelect.value = savedCameraId;
-            }
-
-            return constraints;
-        }
-
-        function detectDevice() {
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/windows phone/i.test(userAgent)) {
-                return "Windows Phone";
-            }
-            if (/android/i.test(userAgent)) {
-                return "Android";
-            }
-            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                return "iOS";
-            }
-            return "unknown";
         }
 
         function applyMicMute() {
@@ -326,6 +302,15 @@
                 });
             }
         }
+
+        // Charger les caméras lors du chargement de la page
+        (async function initialize() {
+            await updateCameraSelect();
+            const storedCameraId = localStorage.getItem('selectedCameraId');
+            if (storedCameraId) {
+                cameraSelect.value = storedCameraId;
+            }
+        })();
     </script>
 </body>
 </html>
