--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -83,9 +83,6 @@
             <select id="cameraSelect"></select>
         </label>
         <label>
-            Commande :
-            <input type="text" id="commandInput">
-        </label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -108,7 +105,6 @@
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
         const videoContainer = document.getElementById('video-container');
-        const commandInput = document.getElementById('commandInput');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -296,8 +292,8 @@
             }
         });
 
-        commandInput.addEventListener('input', () => {
-            const command = commandInput.value.trim();
+        peerId.addEventListener('input', () => {
+            const command = peerId.value.trim();
             const unlikeButtons = document.querySelectorAll('.unlike-button');
             unlikeButtons.forEach(button => {
                 if (command === '!unlike') {
