--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -93,6 +93,7 @@
         let unlikedUsers = {};
         let lastCallerId = '';
         let peerConnections = {};
+        let selectedCameraId = ''; // Variable to store the selected camera ID
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -108,7 +109,6 @@
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
             myIdInput.value = myId;
-            localStorage.setItem('chatUsername', myId);
             initializePeer(myId);
         });
 
@@ -197,7 +197,7 @@
             const device = detectDevice();
             let constraints = {
                 audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+                video: { deviceId: selectedCameraId ? { exact: selectedCameraId } : undefined }
             };
 
             const devices = await navigator.mediaDevices.enumerateDevices();
@@ -231,11 +231,16 @@
                 });
             }
 
-            // Restore the previously selected camera
-            const savedCameraId = localStorage.getItem('selectedCameraId');
-            if (savedCameraId) {
-                cameraSelect.value = savedCameraId;
+            // Restore the previously selected camera if any
+            if (selectedCameraId) {
+                cameraSelect.value = selectedCameraId;
+            } else if (cameraSelect.options.length > 0) {
+                selectedCameraId = cameraSelect.value;
             }
+
+            cameraSelect.addEventListener('change', () => {
+                selectedCameraId = cameraSelect.value;
+            });
 
             return constraints;
         }
@@ -257,137 +262,103 @@
         function applyMicMute() {
             if (localStream) {
                 const audioTracks = localStream.getAudioTracks();
-                if (audioTracks.length > 0) {
-                    audioTracks[0].enabled = !muteCheckbox.checked;
-                }
-            }
-        }
-
-        function sendMuteSignal(mute) {
-            if (call) {
-                call.peerConnection.getSenders().forEach(sender => {
-                    if (sender.track && sender.track.kind === 'audio') {
-                        sender.track.enabled = !mute;
-                    }
-                });
+                audioTracks.forEach(track => track.enabled = !muteCheckbox.checked);
             }
         }
 
         function addRemoteVideo(peerId, stream) {
-            const existingVideo = document.getElementById(peerId);
-            if (existingVideo) {
-                existingVideo.srcObject = stream;
-                return;
+            let video = document.getElementById(peerId);
+            if (!video) {
+                video = document.createElement('video');
+                video.id = peerId;
+                video.autoplay = true;
+                video.playsInline = true;
+                videoContainer.appendChild(video);
+
+                const controls = document.createElement('div');
+                controls.className = 'controls';
+                controls.innerHTML = `
+                    <button class="like-button">❤️</button>
+                    <p class="likes-count">Likes reçus: 0</p>
+                    <button class="unlike-button" style="display: none;">⚡</button>
+                    <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
+                `;
+                video.parentElement.appendChild(controls);
+
+                controls.querySelector('.like-button').addEventListener('click', () => {
+                    sendLike(peerId);
+                });
+
+                controls.querySelector('.unlike-button').addEventListener('click', () => {
+                    sendUnlike(peerId);
+                });
             }
-            const video = document.createElement('video');
-            video.id = peerId;
             video.srcObject = stream;
-            video.autoplay = true;
-            video.playsInline = true;
+        }
 
-            const controls = document.createElement('div');
-            controls.className = 'controls';
-            const likeButton = document.createElement('button');
-            likeButton.className = 'like-button';
-            likeButton.textContent = '❤️';
-            controls.appendChild(likeButton);
-
-            const unlikeButton = document.createElement('button');
-            unlikeButton.className = 'unlike-button';
-            unlikeButton.textContent = '⚡';
-            controls.appendChild(unlikeButton);
-
-            const likeCount = document.createElement('p');
-            likeCount.className = 'likes-count';
-            likeCount.textContent = 'Likes reçus: 0';
-            controls.appendChild(likeCount);
-
-            const unlikeCount = document.createElement('p');
-            unlikeCount.className = 'unlikes-count';
-            unlikeCount.textContent = 'Unlikes reçus: 0';
-            controls.appendChild(unlikeCount);
-
-            const wrapper = document.createElement('div');
-            wrapper.className = 'video-wrapper';
-            wrapper.appendChild(video);
-            wrapper.appendChild(controls);
-
-            videoContainer.appendChild(wrapper);
-
-            likeButton.addEventListener('click', () => {
-                if (call) {
-                    const conn = peerConnections[peerId];
-                    if (conn) {
-                        conn.send({ type: 'like' });
-                    }
+        function sendLike(peerId) {
+            if (peer) {
+                const conn = peer.connections[peerId] && peer.connections[peerId][0];
+                if (conn) {
+                    conn.send({ type: 'like' });
                 }
-            });
+            }
+        }
 
-            unlikeButton.addEventListener('click', () => {
-                if (call) {
-                    const conn = peerConnections[peerId];
-                    if (conn) {
-                        conn.send({ type: 'unlike' });
-                    }
+        function sendUnlike(peerId) {
+            if (peer) {
+                const conn = peer.connections[peerId] && peer.connections[peerId][0];
+                if (conn) {
+                    conn.send({ type: 'unlike' });
                 }
-            });
+            }
+        }
+
+        function updateLikesCount(peerId) {
+            const controls = document.getElementById(peerId)?.nextElementSibling;
+            if (controls) {
+                const likesCount = controls.querySelector('.likes-count');
+                likesCount.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
+            }
+        }
+
+        function updateUnlikesCount(peerId) {
+            const controls = document.getElementById(peerId)?.nextElementSibling;
+            if (controls) {
+                const unlikesCount = controls.querySelector('.unlikes-count');
+                unlikesCount.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+            }
         }
 
         callButton.addEventListener('click', () => {
             const peerId = peerIdInput.value;
-            if (!peerId) return;
-
-            getLocalStream()
-                .then(stream => {
-                    localStream = stream;
-                    localVideo.srcObject = stream;
-                    call = peer.call(peerId, stream);
-                    peerConnections[peerId] = call.peerConnection;
-                    call.on('stream', remoteStream => {
-                        addRemoteVideo(peerId, remoteStream);
-                    });
-                })
-                .catch(err => {
-                    console.error('Failed to get local stream', err);
+            getLocalStream().then((stream) => {
+                const call = peer.call(peerId, stream);
+                call.on('stream', (remoteStream) => {
+                    addRemoteVideo(peerId, remoteStream);
                 });
+            });
         });
 
         hangupButton.addEventListener('click', () => {
             if (call) {
                 call.close();
+                call = null;
             }
+            Object.values(peerConnections).forEach(conn => conn.close());
+            peerConnections = {};
         });
 
-        muteCheckbox.addEventListener('change', () => {
-            applyMicMute();
-        });
-
+        muteCheckbox.addEventListener('change', applyMicMute);
         muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked);
+            if (call && call.peerConnection) {
+                const remoteAudioTracks = call.peerConnection.getRemoteStreams().flatMap(stream => stream.getAudioTracks());
+                remoteAudioTracks.forEach(track => track.enabled = !muteRemoteCheckbox.checked);
+            }
         });
 
-        cameraSelect.addEventListener('change', async () => {
-            const constraints = await updateCameraSelect();
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
-            }
-            getLocalStream(constraints);
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-        });
-
-        function updateLikesCount(peerId) {
-            const likeCountElement = document.querySelector(`#${peerId} .likes-count`);
-            if (likeCountElement) {
-                likeCountElement.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
-            }
-        }
-
-        function updateUnlikesCount(peerId) {
-            const unlikeCountElement = document.querySelector(`#${peerId} .unlikes-count`);
-            if (unlikeCountElement) {
-                unlikeCountElement.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-            }
-        }
+        // Initialize camera select
+        updateCameraSelect();
     </script>
 </body>
 </html>
